default tint color for storyboard

--- a/LeftoverSwap/LoginSignup.storyboard
+++ b/LeftoverSwap/LoginSignup.storyboard
@@ -228,6 +228,7 @@
             <point key="canvasLocation" x="570" y="613"/>
         </scene>
     </scenes>
+    <color key="tintColor" red="0.15686274510000001" green="0.77647058820000003" blue="0.090196078430000007" alpha="1" colorSpace="calibratedRGB"/>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
